src/objects/loan__Loan_Payment_Collection__c.object
<CustomObject>
    <description>Payment Collection</description>
    <fields>
        <fullName>loan__Actual_Collected_Amount__c</fullName>
        <description>Actual Collected Amount</description>
        <inlineHelpText>Actual Collected Amount</inlineHelpText>
        <label>Actual Collected Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Attendance__c</fullName>
        <label>Attendance</label>
        <picklist>
            <picklistValues>
                <fullName>Present</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved Leave</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client</description>
        <inlineHelpText>Clients are the end beneficiaries of micro finance products and services.</inlineHelpText>
        <label>Client</label>
        <referenceTo>loan__Client__c</referenceTo>
        <relationshipLabel>Loan Payment Collection Records</relationshipLabel>
        <relationshipName>Loan_Payment_Collection_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Collection_Date__c</fullName>
        <description>Collection Date</description>
        <inlineHelpText>Collection Date</inlineHelpText>
        <label>Collection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Due_Fees__c</fullName>
        <description>Due Fees</description>
        <inlineHelpText>It is the fee that is due for every installment.</inlineHelpText>
        <label>Due Fees</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Interest__c</fullName>
        <description>Due Interest</description>
        <inlineHelpText>Interest that is due for every installment</inlineHelpText>
        <label>Due Interest</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Penalty__c</fullName>
        <description>Due Penalty</description>
        <inlineHelpText>Due Penalty</inlineHelpText>
        <label>Due Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Due_Principal__c</fullName>
        <description>Due Principal</description>
        <inlineHelpText>It is the Principal that is due for every installment</inlineHelpText>
        <label>Due Principal</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Interest_On_Total_Overdue__c</fullName>
        <description>Interest on total overdue</description>
        <inlineHelpText>Interest on total overdue</inlineHelpText>
        <label>Interest On Total Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Loan Account</description>
        <inlineHelpText>Loan Account</inlineHelpText>
        <label>Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Loan Payment Collection Records</relationshipLabel>
        <relationshipName>Loan_Payment_Collection_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Net_Total_Due_Fees__c</fullName>
        <description>Net Total due fee to be collected.</description>
        <inlineHelpText>Sum of all the fees that is due for each installment.</inlineHelpText>
        <label>Net Total Due Fees</label>
        <summarizedField>loan__Collection_Fee__c.loan__Collection_Fee_Amount__c</summarizedField>
        <summaryForeignKey>loan__Collection_Fee__c.loan__Loan_Payment_Collection_Record__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Fees__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue fees from previous installments</description>
        <inlineHelpText>Overdue fees from previous installments</inlineHelpText>
        <label>Overdue Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Interest__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue interest from previous installments</description>
        <inlineHelpText>Overdue interest from previous installments</inlineHelpText>
        <label>Overdue Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Penalty__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue penalty from previous installments</description>
        <inlineHelpText>Overdue penalty from previous installments</inlineHelpText>
        <label>Overdue Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Overdue_Principal__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overdue principal from previous installments</description>
        <inlineHelpText>Overdue principal from previous installments</inlineHelpText>
        <label>Overdue Principal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Payment Collected</description>
        <inlineHelpText>Payment Collected</inlineHelpText>
        <label>Payment Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Repayment_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Repayment Schedule</description>
        <inlineHelpText>Repayment Schedule</inlineHelpText>
        <label>Repayment Schedule</label>
        <referenceTo>loan__Repayment_Schedule__c</referenceTo>
        <relationshipName>Payment_Collection_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Total_Collection_Amount__c</fullName>
        <formula>loan__Net_Total_Due_Fees__c   +  loan__Due_Interest__c  +  loan__Due_Principal__c +  loan__Overdue_Fees__c +  loan__Overdue_Interest__c +  loan__Overdue_Principal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Collection Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Payment Collection Record</label>
    <nameField>
        <displayFormat>PCN-{0000000000}</displayFormat>
        <label>Payment Collection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Payment Collection Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>